added support for get requests